correçao das listas nao numeradas e background do header

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
             <section>
                 <h2>A estudar</h2>
-                <ul id="licoes_a_aprendidas">
+                <ul id="licoes_a_aprender">
                     <li>JavaScript</li>
                     <li>SQL</li>
                     <li>NoSQL</li>
