tabela de licoes atualizada

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             <li>Soft Skills</li>
             <li>Empatia</li>
         </ol>
+        <aside id="licoesNovas">
         <ul id="licoes_a_aprender">
             <li>JavaScript</li>
             <li>DOM</li>
@@ -47,6 +48,7 @@
             <li>ES6</li>
             <li>CSS Responsive</li>
         </ul>
-    </div>
+        </aside>
+        </div>
   </body>
 </html>
