--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 </head>
 <body>
     <header id="cabecalho">
-        <h1>Lições Aprendidas [Blocos 1, 2 e 3] - Tribe</h1>
+        <h1 id="titulo">Lições Aprendidas [Blocos 1, 2 e 3] | Trybe</h1>
     </header>
+    <main id="conteudo-principal">
+        <img id="minha_foto" src="https://thumbs2.imgbox.com/ee/bf/U0SoaEPl_t.jpg" alt="Imagem Enio Nicael"/>
+    </main>
 </body>
 </html>
