--- a/index.html
+++ b/index.html
@@ -10,5 +10,11 @@
   <header id="cabecalho">
     <h1 id="titulo">Lições aprendidas - Trybe!</h1>
   </header>
-</body>
+  <main>
+    <img id="minha_foto" src="./img/Cris1.jpeg" alt="">
+  </main>
+  <footer>
+    <h4>Cristiano L Duarte</h4>
+  </footer>
+</body>   
 </html>
