--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
             <h1 id="titulo">
                 Lições aprendidas - Trybe!
             </h1>
+            <nav>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Arquivos</a></li>
+                </ul>
+            </nav>
         </header>
         <main>
             <section>
@@ -43,6 +49,9 @@
             <section>
                 <article>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores tempore excepturi, rerum autem temporibus labore obcaecati iste, similique maiores accusamus, corrupti dolore aut eos quod eius officia tenetur! A, placeat?</p>
+                    <aside>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reprehenderit quam libero quasi voluptatibus cupiditate eligendi quibusdam harum! Error eveniet perferendis et cumque aliquid facere necessitatibus nisi fuga ad, quaerat nam.
+                    </aside>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut sint distinctio quae molestiae ipsum dignissimos nemo nihil quidem, ducimus voluptates natus laudantium soluta commodi veritatis libero amet necessitatibus id iusto.</p>
                 </article>
             </section>
