editando o CSS, article e aside

--- a/index.html
+++ b/index.html
@@ -58,29 +58,18 @@
     </section>
 
     <article>
-        <section>
-            <h3>Como está sendo o meu aprendizado</h3>
-            <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ea nostrum aut explicabo tempora repellendus
-                nesciunt voluptatum eius aspernatur labore? Adipisci veniam vero expedita dolorum aspernatur nam
-                incidunt
-                mollitia deserunt placeat? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Mollitia libero,
-                quas
-                eius vero quia, numquam vel id corrupti a neque enim nisi maxime modi fugiat architecto? Reiciendis
-                aspernatur nulla ipsa?
-            </p>
-        </section>
+        <h4>Coisas que eu estou aprendendo</h4>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero magnam eos totam itaque, ducimus quis, est dignissimos quibusdam molestiae veniam veritatis officiis reiciendis maiores dicta ea molestias nemo facere necessitatibus?Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis, mollitia, tempora optio delectus blanditiis quibusdam alias, voluptatum molestiae tempore rem natus quia ipsum cum dicta exercitationem iusto quae. Explicabo, odit!
+        </p>
     </article>
 
-    <section>
-        <aside>
-            <h3>A passagem que foi marcante para mim</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum est suscipit ratione incidunt ea delectus
-                laudantium laboriosam, dolorem tempora sapiente cupiditate rerum vel. Cupiditate earum sapiente, facilis
-                sunt sint consequatur?
-            </p>
-        </aside>
-    </section>
+    <aside>
+        <h4>Passagem sobre meu aprendizado</h4>
+        <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis, veritatis cumque, explicabo delectus quaerat labore soluta atque amet aspernatur nesciunt repellendus voluptatibus aperiam. Incidunt culpa sed aut ad, dicta consequatur?
+        </p>
+    </aside>
 
 
     <table border="1">
