requisitos 4 lista e id licoes_aprendidas

--- a/index.html
+++ b/index.html
@@ -11,5 +11,21 @@
       <h1 id="titulo">Perycles F.</h1>
       <img id="minha_foto" src="./img1.jpg" alt="">
   </header>
+  <main>
+    <section>
+      <li id="licoes_aprendidas">
+        <p></p>
+        <p></p>
+        <p></p>
+        <p></p>
+        <p></p>
+        <p></p>
+        <p></p>
+        <p></p>
+        <p></p>
+        <p></p>
+      </li>
+    </section>
+  </main>
 </body>
 </html>
