[Task 8] Added article about all my learning

--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
         </header>
         <img src="perfil.jpg" id="minha_foto" alt="Minha foto">
         <nav>
-            <h3>Me segue nas redes sociais!</h3>
+            <h2>Me segue nas redes sociais!</h2>
             <p>
                 <a href="https://www.linkedin.com/in/ggaldino95/" target="_blank">LinkedIn</a>
                 <a href="https://github.com/GGaldino95" target="_blank">GitHub</a>
             </p>
         </nav>
         <section>
-            <h4>Lições Aprendidas:</h4>
+            <h3>Lições Aprendidas:</h3>
             <ol id="licoes_aprendidas">
                 <li>Fundamentos do Desenvolvimento Web</li>
                 <li>Introdução - Unix & Shell</li>
@@ -33,7 +33,7 @@
             </ol>
         </section>
         <section>
-            <h4>Lições que desejo aprender ainda:</h4>
+            <h3>Lições que desejo aprender ainda:</h3>
             <ul id="licoes_a_aprender">
                 <li>Javascript</li>
                 <li>React</li>
@@ -47,8 +47,23 @@
                 <li>Soft Skills</li>
             </ul>
         </section>
+        <article>
+            <h2>Trajetória - A New Hope</h2>
+            <p>
+                Numa galáxia não muito distante... <br> 
+                Lá estava eu, começando meus estudos na TRYBE, com um baita aperto no coração
+                me perguntando: "Será que sou capaz?" "Vou dar conta disso?" <br>
+                E eu só tenho a agrader por todo o suporte que a TRYBE dá para seus alunos, pois 
+                eles te deixam com a sensação de que você é capaz de tudo!
+            </p>
+            <p>
+                Desde os assuntos mais básicos vistos como usar o Terminal do Linux até o ponto que estamos,
+                a TRYBE tem dado uma experiência incrível que eu não achei ser possível até então. <br>
+                Tamo junto galera! <strong>#VQV</strong>
+            </p>
+        </article>
         <footer id="rodape">
-            <p>Webiste desenvolvido por Gabriel Galdino. Todos os direitos reservados.</p>
+            <em>Webiste desenvolvido por Gabriel Galdino. Todos os direitos reservados.</em>
         </footer>
     </body>
 </html>
