--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
         <li>HOF</li>
         <li>ES6</li>
     </ul>
+    <article id="my-learning">
+        <h2>Meu Aprendizado:</h2>
+        <p>Quando eu inicei os estudos na trybe, conhecia muito pouco sobre o mundo de desenvolvimento web, na primeira semana eu comecei a ter aulas sobre terminal e git, mesmo já sabendo um pouco dessas ferramentas, a trybe me deu os mecanismos para consolidar ainda mais o meu conhecimento. Logo depois comecei a ter aulas sobre internet, <i>HTML</i>, <i>CSS</i> e <i>HTML Semântico</i>. Desde então sinto muita segurança em todo o conteúdo que ja vi até aqui, consigo compreender facilmente uma pagina HTML, e fazer paginas semânticamente corretas, além de aplicar um bom CSS nelas.</p>
+    </article>
     <footer id="rodape">
         <p>Feito por Pedro Henrique</p>
     </footer>
