--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <footer id="rodape">
             <ul>
                 <li><a href="https://brenno-calado.carto.com/" target="_blank">CARTO</a></li>
-                <li><a href="https://www.linkedin.com/in/brenno-calado-vieira-de-melo-nascimento/" target="_blank"></a>Linkedin</li>
+                <li><a href="https://www.linkedin.com/in/brenno-calado-vieira-de-melo-nascimento/" target="_blank">Linkedin</a></li>
             </ul>
         </footer>
     </body>
