--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
@@ -15,26 +16,46 @@
       </header>
     </section>
 
-    <article>
-      <section id="apresentacao">
-          <h2 id="nome">Fernanda Cajueiro Machado</h2>
-          <img id="minha_foto" src="fernanda.jpeg" alt="Foto de Fernanda Cajueiro">
-      </section>
+    <section id="apresentacao">
+      <img id="minha_foto" src="fernanda.jpeg" alt="Foto de Fernanda Cajueiro">
+      <h2 id="nome">Fernanda Cajueiro Machado</h2>
+      <p><a href="https://www.linkedin.com/in/fernandacajueiro/" target="_blank">LinkedIn</a> | <a href="https://github.com/fernandacajueiro" target="_blank">GitHub</a></p>
+    </section>
 
-      <section>
-          <ol id="licoes_aprendidas">
-              <li>Unix</li>
-              <li>Bash</li>
-              <li>Shell</li>
-              <li>Git</li>
-              <li>GitHub</li>
-              <li>GitHub Pages</li>
-              <li>Internet</li>
-              <li>HTML</li>
-              <li>CSS</li>
-              <li>HTML Semântico</li>
-          </ol>
-      </section>
+    <section>
+      <h2 id="licoes">Lições</h2>
+        <ol id="licoes_aprendidas">
+          <li>Unix</li>
+          <li>Bash</li>
+          <li>Shell</li>
+          <li>Git</li>
+          <li>GitHub</li>
+          <li>GitHub Pages</li>
+          <li>Internet</li>
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>HTML Semântico</li>
+        </ol>
+        <ul id="licoes_a_aprender">
+          <li>JavaScript</li>
+          <li>React</li>
+          <li>Node.js</li>
+          <li>Metodologias Ágeis</li>
+          <li>SQL</li>
+          <li>Python</li>
+          <li>Unit Tests</li>
+          <li>DOM</li>
+          <li>Resposive CSS</li>
+          <li>Soft skills</li>
+        </ul>
+    </section>
+    
+    <article>
+      <p>Há alguns anos, tinha vontade de estudar e aprender mais sobre programação e desenvolvimento de software. Em novembro de 2019, descobri a Trybe por uma rede social e a vontade aumentou. Depois de alguns meses, só tive mais certeza de que queria mudar de carreira e começar a programar. Entrei na turma 9 da Trybe, iniciada em novembro de 2020, e desde então aprendi mais que em 1 ano de faculdade!</p>
     </article>
+
+    <footer id="rodape">
+      <p>Projeto desenvolvido por Fernanda Cajueiro durante o curso de desenvolvimento de software na Trybe, em novembro de 2020. Todos os direitos reservados.</p>
+    </footer>
 </body>
 </html>
