Redução de texto dos requisitos 8 e 9

--- a/index.html
+++ b/index.html
@@ -11,13 +11,19 @@
     <h1 id="titulo">
       Lições Aprendidas - Trybe :)
     </h1>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="https://github.com/marcusWittho" target="_blanck">GitHub</a></li>
+      </ul>
+    </nav>
   </header>
   <img id="minha_foto" src="https://avatars1.githubusercontent.com/u/66654653?s=460&u=c99615034de62600eda9617441035c26fe045751&v=4" alt="Foto do Marcus">
   <main>
-    <article>
-      <h2>Um pouco da minha jornada</h2>
+    <article">
+      <h2>Início da jornada</h2>
       <p>
-        Deixarei aqui um breve resumo de como começou essa aventura na Trybe. Depois de muito desânimo com a minha vida profissional, resolvi finalmente partir para uma área que gosto muito, e para a minha alegria, pude iniciar meus estudos na área da programação aqui na Trybe, uma escola incrível, que além de capacitar técnicamente seus estudantes, os ajuda a desenvolver habilidades sócio comportamentais, e isso fez ficar ainda mais animado com o método de ensino que esles praticam. Acredito que devido ao processo seletivo da Trybe, eles conseguem pessoas incríveis para serem seus alunos, pessoas que estão sempre dispostas a ajudar uns aos outros, é demais :)
+        Deixarei aqui um breve resumo sobre meu começo na Trybe. Depois de muito desânimo com a minha vida profissional, resolvi finalmente partir para uma área que gosto muito, e para minha alegria pude estudar aqui na Trybe,  que além de capacitar tecnicamente seus estudantes, os ajuda a desenvolver habilidades sócio comportamentais, e isso fez ficar ainda mais animado com o método de ensino que eles praticam. Acredito que devido ao processo seletivo da Trybe, eles conseguem pessoas incríveis para serem seus alunos, pessoas que estão sempre dispostas a ajudar uns aos outros, é demais.
       </p>
     </article>
     <section>
@@ -47,9 +53,9 @@
       </ul>
     </section>
     <aside>
-      <h2>Como é estudar na Trybe</h2>
+      <h2>Momento que me fez perder aulguns cabelos.</h2>
       <p>
-        Estudar na Trybe é com certeza desafiador, temos bastante conteúdo e o tempo para desenvolver os exercícios é quase sempre bem justo. Vez ou outra não entendo, mas algo que o professor diz durante a aula ao vivo ou alguma dúvida de algum colega acaba ajudando muito no entendimento, ou posso ter esquecido de fechar uma das chaves no código e acabar perdendo um tempão com isso.
+        Só um dos vários momentos na trybe. Enquanto eu realizava um dos exercícios propostos, o código simplesmente parou funcionar, orei para pelo menos três santos diferentes, até que um me iluminou, eu havia esquecido de fechar um dos parênteses.
       </p>
     </aside>
     <section>
