Requisito 7. Inserindo um link externo para o site da Trybe.

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <main>
         <img src="minha_foto.png" id="minha_foto">
 
+        <p>Olá! Tudo bem? Meu nome é Jhonatan, sou aluno da <a href="https://www.betrybe.com/">Trybe</a></p>
+
         <ol id="licoes_aprendidas">
             <li>Unix</li>
             <li>Git</li>
@@ -43,6 +45,7 @@
 
         <footer id="rodape">
             <p>Site created by Jhonatan Arguello</p>
+    
         </footer>
     </main>
 
