--- a/index.html
+++ b/index.html
@@ -37,18 +37,11 @@
         <li>Softskills Empathy</li>
     </ul>
     <article>
-        <p>
-Aprendendo a aprender - Go Tryber
-Por conseguinte, a execução dos pontos do programa nos obriga à análise dos métodos utilizados na avaliação de resultados. 
-Por outro lado, a complexidade dos estudos efetuados facilita a criação do impacto na agilidade decisória. 
-Assim mesmo, a contínua expansão de nossa atividade acarreta um processo de reformulação e modernização das direções preferenciais no sentido do progresso. 
-        </p>
+        <p>Aprendendo a aprender - Go Tryber</p>
+        <p>Por conseguinte, a execução dos pontos do programa nos obriga à análise dos métodos utilizados na avaliação de resultados. Por outro lado, a complexidade dos estudos efetuados facilita a criação do impacto na agilidade decisória. Assim mesmo, a contínua expansão de nossa atividade acarreta um processo de reformulação e modernização das direções preferenciais no sentido do progresso. </p>
     </article>
     <aside>
-        <p>
-When I've heard of Trybe for first time, I was unbeliver. I thought that they were something like hijacking. But when I studied deeper the people who work here, I convince myself that my future was here.
-Today, I'm studying hard to become a elite software develop with Trybe help. I believe my dream will came true and Trybe as well, so, bless us God...
-        </p>
+        <p>When I've heard of Trybe for first time, I was unbeliver. I thought that they were something like hijacking. But when I studied deeper the people who work here, I convince myself that my future was here.Today, I'm studying hard to become a elite software develop with Trybe help.</p>
     </aside>
     <a href="https://trybe.com.br" target="_blank"> Clique here to meet who is making this magic happen.</a>
     <footer id="rodape">
