--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <header id="cabecalho">
         <h1 id="titulo">Lições Aprendidas - Trybe</h1>
     </header>
+    <img id="minha_foto" src="minha_foto.jpeg" alt="Foto de Micaela">
 </body>
 </html>
