--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1 id="titulo">Lições Aprendidas - Trybe!</h1>
 </head>
   <img  id="minha_foto" src="https://avatars1.githubusercontent.com/u/68447692?s=60&v=4" alt="foto kamila github">
-<ul id="licoes_aprendidas">
+<ol id="licoes_aprendidas">
   <li>Git;</li>
   <li> github;</li>
   <li>HTML;</li>
@@ -22,7 +22,7 @@
   <li>Zoom;</li>
   <li>Soft Skills;</li>
   <li>Empatia.</li>
-</ul>
+</ol>
 
 </body>
 </html>
