Adiciona lista de licoes aprendidas, quarto requisito

--- a/index.html
+++ b/index.html
@@ -10,5 +10,19 @@
         <h1 id="titulo">LESSONS LEARNED PROJECT</h1>
       </div>
       <img id="minha_foto" src="fotolets.jpg" alt="foto de uma mulher branca sorrindo com cabelo chanel de cor castanho e blusa cor de vinho">
+      <div id="licoes_aprendidas">
+          <ol>
+              <li>avffb</li>
+              <li>dhfud</li>
+              <li>frf</li>
+              <li>frfr</li>
+              <li>rvgfrvf</li>
+              <li>fvf</li>
+              <li>fvfv</li>
+              <li>fvfdv</li>
+              <li>efe</li>
+              <li>edef</li>
+          </ol>
+      </div>
     </body>
 </html>
