Alcançado o requisito 4, inserida lista com 10 aprendizados obtidos na trybe.

--- a/index.html
+++ b/index.html
@@ -15,6 +15,23 @@
     <main>
         <img id="minha_foto" src="rsz_meplayingbass.jpg" alt="One picture of me Igor playing bass.">
 
+        <section>
+            <h3>Lições aprendidas na Trybe:</h3>
+            <ul id="licoes_aprendidas">
+                <li>Como operar o shell</li>
+                <li>Operando em diretórios e navegando neles usando Bash</li>
+                <li>Como trabalhar com o GIT</li>
+                <li>Criando repositórios GIT, criando branches e etc...</li>
+                <li>Introdução ao HTML</li>
+                <li>HTML Semântico</li>
+                <li>Introdução ao CSS</li>
+                <li>Box Model do CSS</li>
+                <li>Entendimento básico de como a internet funciona</li>
+                <li>Como exercitar a empatia no ambiente de trabalho</li>
+            </ul>
+        </section>
+
+
     </main>
 </body>
 
