Fazendo o requisito 7 e arrumando erros do 8

--- a/index.html
+++ b/index.html
@@ -39,6 +39,6 @@
         <p>Quando eu inicei os estudos na trybe, conhecia muito pouco sobre o mundo de desenvolvimento web, na primeira semana eu comecei a ter aulas sobre terminal e git, mesmo já sabendo um pouco dessas ferramentas, a trybe me deu os mecanismos para consolidar ainda mais o meu conhecimento. Logo depois comecei a ter aulas sobre internet, <i>HTML</i>, <i>CSS</i> e <i>HTML Semântico</i>. Desde então sinto muita segurança em todo o conteúdo que ja vi até aqui, consigo compreender facilmente uma pagina HTML, e fazer paginas semânticamente corretas, além de aplicar um bom CSS nelas.</p>
     </article>
     <footer id="rodape">
-        <p>Feito por Pedro Henrique</p>
+		<a href="https://github.com/pedrohrbispo" target="blank">GitHub</a>
     </footer>
 </body>
