Solves requirements 7 and 8

--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
                 <li>NodeJS</li>
             </ul>
         </main>
+        <article>
+            <h2>Meu aprendizado na Trybe</h2>
+            <p id="meu-aprendizado">Ser estudante da Trybe tem sido um desafio e uma conquista nova a cada dia! Eu, duas semanas atrás, mal sabia o que era HTML e hoje estou eu aqui criando essa página e estilizando-a com CSS. Também aprendi a utilizar o terminal do Linux, GIT e GitHub. Para além disso, também iniciei os estudos de SofSkills com a Trybe, aprendi muito sobre inteligência emocional e mal posso esperar para aprender e evoluir cada dia mais na carreira de Desenvolvimento de Softwares. Você pode conferir mais sobre o curriculo da Trybe clicando nesse <a href="https://www.betrybe.com/formacao" target="_blank">link</a>.</p>
+        </article>
         <footer id="rodape">
             <h6>Todos os direitos reservados, Pamela Sales.</h6>
         </footer>
