--- a/index.html
+++ b/index.html
@@ -9,10 +9,18 @@
   <body>
 <!--  A barra deve possuir o ID "cabecalho" -->
     <header id="cabecalho">
-      <nav>
-        <h1 id="titulo">Lições Aprendidas - Trybe</h1>
-      </nav>
+      <h1 id="titulo">Lições Aprendidas - Trybe</h1>
     </header>
+
+    <nav id="menu">
+      <ul>
+        <li>
+          <a href="#licoes_a_aprender">Listas</a>
+          <a href="#tabela">Tabela</a>
+          <a href="#rodape">Rodapé</a>
+        </li>
+      </ul>
+    </nav>
 
 <!--  A foto deve ser inserida utilizando uma tag img com o ID "minha_foto" -->
     <img id="minha_foto" src="./img/perfil.jpg" alt="Foto do perfil">
