--- a/index.html
+++ b/index.html
@@ -11,22 +11,38 @@
         <h1 id="titulo">Lições Aprendidas - Trybe!</h1>
         <nav>
             <ul>
-                <li>Home</li>
-                <li>Login</li>
-                <li>Missão</li>
+                <li class="links"><a href="#">Home</a></li>
+                <li class="links"><a href="#1">Valores</a></li>
+                <li class="links"><a href="#2">Missão</a></li>
             </ul>
         </nav>
+        <br>
+        <figure id="foto_alexandre">  
+            <div id="imagem">          
+                <img src="img/Alexandre.jpg" alt="Alexandre - Turma 09">
+                <figcaption>Trybe - Alexandre</figcaption>
+            </div>
+            <div id="bem">
+            <marquee>Bem-vindo ao meu mundo!</marquee>
+            </div>
+                        
+        </figure>
+        <p id="depoimento">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quaerat fugiat accusantium corporis laboriosam dolore expedita quod doloremque laborum, blanditiis eveniet accusamus, atque maxime voluptatibus corrupti? Maiores quasi iusto odio quidem.
+        </p>
     </header>
+    <main>
+        <section>
+            <article>
+
+            </article>
+        </section>
+    </main>
+    <footer>
+
+    </footer>
 
 </body>
 </html>
 
 
-1 - O corpo da página deve possuir uma cor de fundo específica
-Possuir cor de fundo: rgb(253, 251, 251)
-2 - Seu site deve possuir uma barra superior com um título
-A barra deve possuir o ID "cabecalho"
-
-O elemento com o id cabecalho deve ser fixo no topo da página, com a propriedade top tendo 0px
-
-O título deve estar dentro da barra e possuir o ID "titulo", além de ser uma tag h1
