--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
         <meta name="viewport" content="width=device-width" />
         <title>Lessons Lerned - Trybe</title>
         <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
     </head>
 
     <body>
@@ -13,19 +15,20 @@
 
             <nav>
                 <ul>
-                    <li>Início</li>
-                    <li>Lições</li>
-                    <li>Sobre</li>
+                    <li class="nav-links">Início</li>
+                    <li class="nav-links">Lições</li>
+                    <li class="nav-links">Sobre</li>
                 </ul>
             </nav>
         </header>
 
         <main>
             <div>
+                <h2>Saulo Kirchmaier Teixeira</h2>
                 <img src="/sauloimg.jpeg" alt="Imagem de Saulo Kirchmaier" id="minha_foto">
             </div>
 
-            <section>
+            <section class>
                     <h2>Estudado</h2>
                     <ol id="licoes_aprendidas">
                         <li>Unix/Shell</li>
