alinhamentos entre blocks e estilo de tags

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             </nav>
         </header>
         <main>
-            <h2>Lições Aprendidas</h2>
             <ol id="licoes_aprendidas">
+                <h2>Lições Aprendidas</h2>
                 <li>História do Linux</li>
                 <li>Comandos básicos no Terminal</li>
                 <li>Como trabalhar em grupo</li>
@@ -33,8 +33,8 @@
                 <li>Como utilizar HTML semântica</li>
                 <li>Como desenvolver projetos</li>
             </ol>
-            <h2>Lições que quero aprender</h2>
             <ul id="licoes_a_aprender">
+                <h2>Lições que quero aprender</h2>
                 <li>Como programar em JS</li>
                 <li>Utilizando JS em sites com HTML e CSS</li>
                 <li>Como realiar projetos em equipe</li>
@@ -46,12 +46,12 @@
                 <li>Como liderar projetos</li>
                 <li>Como alcançar um emprego de alto nível</li>
             </ul>
-            <article id="artigo">
-                <h3>Meu aprendizado na Trybe <em>so far</em>...</h3>
-                <p> Quando iniciei o curso há pouco tempo confesso que não imaginava que seria o que está sendo. Para falar a verdade, achei que seria muito menos impactante e olhem que só se passaram <b>2 semanas!</b><br> Atualmente eu já me sinto como um desenvolvedor web iniciante, realizando tarefas antes inimagináveis, como estruturar uma página em HTML estilizando com CSS e publicando ela através de pushs, commits e pull requests no Git/GitHub.<br></p>
-            </article>
             <aside>
-                <section>
+                <article id="artigo">
+                    <h3>Meu aprendizado na Trybe <em>so far</em>...</h3>
+                    <p> Quando iniciei o curso há pouco tempo confesso que não imaginava que seria o que está sendo. Para falar a verdade, achei que seria muito menos impactante e olhem que só se passaram <b>2 semanas!</b><br> Atualmente eu já me sinto como um desenvolvedor web iniciante, realizando tarefas antes inimagináveis, como estruturar uma página em HTML estilizando com CSS e publicando ela através de pushs, commits e pull requests no Git/GitHub.<br></p>
+                </article>
+                <section id="section">
                     <h3>Por exemplo...</h3>
                     <img id="okay" src="okayhand.jpg" alt="ate agora tudo certo">
                     <p id="exemplo">Esses dias eu terminei meu web portfolio (cujo link você pode acessar por <a href="https://lhfmworker.github.io/" target="_blank">aqui</a>)</p>
