achecker potential problems review

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width">
         <link rel="stylesheet" href="style.css">
-        <title>Project lessons learned</title>
+        <title>Lições aprendidas - Trybe!</title>
     </head>
     <body>
         <header id="cabecalho">
@@ -20,7 +20,7 @@
         </header>
         <main>
             <section>
-                <img id="minha_foto" src="brenno-calado.jpg" alt="Autor da página posando para uma foto com a mata de Brennand como plano de fundo">
+                <img id="minha_foto" src="brenno-calado.jpg" alt="brenno-calado.jpg">
                 <ol id="licoes_aprendidas">
                     <li>Ligou o Ubuntu? Dê um <code>sudo apt-get upgrade</code>!</li>
                     <li>Já deu o seu <code>commit -m</code> hoje? Opa, lá vem bomba...</li>
@@ -58,8 +58,8 @@
         </main>
         <footer id="rodape">
             <ul>
-                <li><a href="https://brenno-calado.carto.com/" target="_blank">CARTO</a></li>
-                <li><a href="https://www.linkedin.com/in/brenno-calado-vieira-de-melo-nascimento/" target="_blank">Linkedin</a></li>
+                <li><a href="https://brenno-calado.carto.com/" target="_blank">Link para minha página da CARTO</a></li>
+                <li><a href="https://www.linkedin.com/in/brenno-calado-vieira-de-melo-nascimento/" target="_blank">Link para minha página do Linkedin</a></li>
             </ul>
         </footer>
     </body>
