--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Bruna (Projeto)</title>
 </head>
 <link rel="stylesheet" href="style.css" class="css">
 <header id="cabecalho">
@@ -23,5 +23,20 @@
         <li>Usar o VS Code</li>
         <li>Trabalhar com maior efetividade no HTML e CSS</li>
     </ol>
+    <ul id="licoes_a_aprender">
+        <li>Entender muito bem o JavaScript</li>
+        <li>Ter muitas habilidades com HTML e CSS</li>
+        <li>Trabalhar melhor em equipe</li>
+        <li>Aperfeiçoar minhas Soft Skills</li>
+        <li>Conhecer e trabalhar com o SQL</li>
+        <li>Explorar o NodeJS</li>
+        <li>Como trabalhar o Python</li>
+        <li>Aperfeiçoar os conhecimentos sobre os Algoritmos</li>
+        <li>Desenvolver meus projetos e aperfeiçoá-los </li>
+        <li>Estar pronta para trabalhar como Dev Front-end</li>
+    </ul>
+    <p><a href="https://eucurtoviajar.com/"target=_blank >Acesse o meu Blog!</a></p>
+    <footer id="rodape">
+    </footer>
 </body>
 </html>
