[Task 9] Created aside with a little passage about my learning proccess

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 Numa galáxia não muito distante... <br> 
                 Lá estava eu, começando meus estudos na TRYBE, com um baita aperto no coração
                 me perguntando: "Será que sou capaz?" "Vou dar conta disso?" <br>
-                E eu só tenho a agrader por todo o suporte que a TRYBE dá para seus alunos, pois 
+                Eu só tenho a agrader por todo o suporte que a TRYBE dá para seus alunos, pois
                 eles te deixam com a sensação de que você é capaz de tudo!
             </p>
             <p>
@@ -62,6 +62,12 @@
                 Tamo junto galera! <strong>#VQV</strong>
             </p>
         </article>
+        <aside>
+            <p>
+                Tudo começou com a utilização do Terminal para a manipulação de arquivos e diretórios,
+                seguindo para os Fundamentos Web até chegar nos conceitos básicos sobre HTML e CSS.
+            </p>
+        </aside>
         <footer id="rodape">
             <em>Webiste desenvolvido por Gabriel Galdino. Todos os direitos reservados.</em>
         </footer>
