Altera o formato das imagens de rodapé

--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
             <footer id="rodape">
                 <p>
                     Informacoes para contato:<br>
-                    
+                    <a href="https://www.linkedin.com/in/khyrki/" target="_blank"><img id="linkedin" src="Linkedin-Symbol.png" alt="uma logo do site linkedin"></a>
+                    <a href="https://www.instagram.com/khyrki/" target="_blank"><img id="instagram"src="Instagram-Symbol.png" alt="Uma logo do site instagram que direciona para meu perfil da rede social"></a>
                 </p>
             </footer>
         </main>
