--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
     <section>
         <img id="minha_foto" src="WhatsApp Image 2020-11-13 at 11.58.02 PM (3).jpeg" alt="Foto do Bernardo">
     </section>
+    <article>
+    <p>Incrível a quantidade de informação que nossa mente e capaz de aprender. Nós não temos a 
+        dimensão de nosso potencial. Muitas vezes nos sentimos acomodados e incapacitados e somente
+         mudamos nosso paradigma quando somos expostos à pressão a muita informação. Meu aprendizado 
+         tem sido assim na Trybe. As informacõs e os desafios não param de chegar fazendo com que seu
+          dia se torne muito pequeno. A pessoa vai evoluindo em seu potencial naturalmente, tornando 
+          tarefas antes impossiveis agora simples. </p>
+    </article>
     <section>
         <h2>Lista das lições já aprendidas</h2>
         <ol id="licoes_aprendidas">
