requisito 4 inserindo lista com 10 itens

--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
   <main>
     <section>
       <li id="licoes_aprendidas">
-        <p></p>
-        <p></p>
-        <p></p>
-        <p></p>
-        <p></p>
-        <p></p>
-        <p></p>
-        <p></p>
-        <p></p>
-        <p></p>
+        <p>Unix</p>
+        <p>Bash</p>
+        <p>Git</p>
+        <p>GitHub</p>
+        <p>Html</p>
+        <p>Css</p>
+        <p>Internet</p>
+        <p>Semantica Html</p>
+        <p>Boas praticas</p>
+        <p>Soft Skill</p>
       </li>
     </section>
   </main>
