--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     <h1 id="titulo">Lessons Learned</h1>
 
     <nav>
-    <ul>
-      <li><a href=""></a>Página Inicial</li>
-      <li><a href=""></a>Artigo</li>
-      <li><a href=""></a>Fotografia</li>
-    </ul>
-  </nav>
+      <ul>
+        <li><a href=""></a>Página Inicial</li>
+        <li><a href=""></a>Artigo</li>
+        <li><a href=""></a>Fotografia</li>
+      </ul>
+    </nav>
 
   </header>
 
@@ -27,32 +27,46 @@
   <section>
     <aside>
       <nav>
-      <ol id="licoes_aprendidas">
-        <li>Terminal Shell</li>
-        <li>Git</li>
-        <li>GitHub</li>
-        <li>Como funciona a internet</li>
-        <li>HTML</li>
-        <li>HTML - posicionamento</li>
-        <li>CSS</li>
-        <li>HTML semântico</li>
-        <li>O stomatopoda</li>
-        <li>Projeto</li>
-      </ol>
+        <ol id="licoes_aprendidas">
+          <li>Terminal Shell</li>
+          <li>Git</li>
+          <li>GitHub</li>
+          <li>Como funciona a internet</li>
+          <li>HTML</li>
+          <li>HTML - posicionamento</li>
+          <li>CSS</li>
+          <li>HTML semântico</li>
+          <li>O stomatopoda</li>
+          <li>Projeto</li>
+        </ol>
 
-      <ul id="licoes_a_aprender">
-        <li>JavaScript</li>
-        <li>UI & UX</li>
-        <li>React</li>
-        <li>Nodejs</li>
-        <li>Expressjs</li>
-        <li>SQL & NoSQL/li>
-        <li>Python</li>
-        <li>Soft Skills</li>
-        <li>Front-end</li>
-        <li>Back-end</li>
-      </ul>
+        <ul id="licoes_a_aprender">
+          <li>JavaScript</li>
+          <li>UI & UX</li>
+          <li>React</li>
+          <li>Nodejs</li>
+          <li>Expressjs</li>
+          <li>SQL & NoSQL/li>
+          <li>Python</li>
+          <li>Soft Skills</li>
+          <li>Front-end</li>
+          <li>Back-end</li>
+        </ul>
     </aside>
+  </section>
+
+  <section>
+    <article>
+      <h2>artigo sobre seu aprendizado.</h2>
+      <p>
+        <strong>Nada facil!</strong>
+        Na verdade meu aprendizado tem sido muito bom e satisfatório. Quando penso o nível de conhecimento que tinha
+        semanas atrás e comparo com hoje, é grande a diferença. Depois de passar por vários sufocos como reinstalar
+        versões do Linux que sempre “bugavam”, ter que usá-lo sem interface foi desafiador, mas consegui. Talvez se não
+        fosse para estar na Trybe nem teria tentado. Um dos principais motivos que me fez estar aqui é me tirar da zona
+        de conforto, sendo assim, vamos nessa!
+      </p>
+    </article>
   </section>
 
   <section>
