--- a/index.html
+++ b/index.html
@@ -60,14 +60,18 @@
     <article>
         <h4>Coisas que eu estou aprendendo</h4>
         <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero magnam eos totam itaque, ducimus quis, est dignissimos quibusdam molestiae veniam veritatis officiis reiciendis maiores dicta ea molestias nemo facere necessitatibus?Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis, mollitia, tempora optio delectus blanditiis quibusdam alias, voluptatum molestiae tempore rem natus quia ipsum cum dicta exercitationem iusto quae. Explicabo, odit!
+            Estou em um momento de transição de carreira, já tinha feito alguns cursos de programação e decidi ingressar
+            na escola Trybe. Tinha muitas expectativas e dúvidas antes de começar, mas agora com quase 1 mês de curso
+            sinto que fiz uma boa escolha, o dia a dia é bem corrido, cada dia tem matéria nova e temos que finalizar
+            tudo antes de começar o dia seguinte para não acumular.
         </p>
     </article>
 
     <aside>
         <h4>Passagem sobre meu aprendizado</h4>
         <p>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis, veritatis cumque, explicabo delectus quaerat labore soluta atque amet aspernatur nesciunt repellendus voluptatibus aperiam. Incidunt culpa sed aut ad, dicta consequatur?
+            Ainda tenho muito a aprender, tanto em conhecimentos tecnicos e novas tecnologias como React e Python como
+            em soft skills de como gerir o tempo e como se comportar em um ambiente de desenvolvimento.
         </p>
     </aside>
 
