Bônus - Adicionando tabela

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <h1 id="titulo">Project Lessons Learned</h1>
         <nav>
             <ul>
-                <li>Página Inicial</li>
-                <li>Sobre</li>
-                <li>Contato</li>
+                <li><a href="#">Página Inicial</a></li>
+                <li><a href="#">Sobre</a></li>
+                <li><a href="#">Contato</a></li>
             </ul>
         </nav>
     </header>
@@ -51,6 +51,17 @@
         <aside>
             <p>Acho interessante que não estão nos preparando para o mercardo de trabalho apenas nos apresentando as ferramentas mais utilizadas, mas também preparando nosso emocional para lidar com as adversidades que enfrentaremos num dia-a-dia de trabalho.</p>
         </aside>
+        <table>
+            <tr>
+                <th colspan="4">Conteúdo Trybe</th>
+            </tr>
+            <tr>
+                <td>Bloco 1: Unix, Bash e Shell Script</td>
+                <td>Bloco 2: Git, GitHub e Internet</td>
+                <td>Bloco 3: Introdução à HTML e CSS</td>
+                <td>Bloco 4: Introdução à JavaScript e Lógica de Programação</td>
+            </tr>
+        </table>
     </main>
     <footer id="rodape">
         Feito com 💚 por <a href="https://github.com/nathaliaveneziano" target="_blank">Nathália Veneziano</a>
