--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
         <h1 id="titulo">Lições Aprendidas - Trybe!</h1>
         <img id="minha_foto" src="face_500kb.jpg" alt="foto de Luis Carlos Goandete">
 
-        <nav>
+        <nav id="menu">
             <ul>
                 <li><a href="#licoes">lições</a></li>
-                <li><a href="#aprendizado">Meu aprendizado</a></li>
+                <li><a href="#meu_aprendizado">Meu aprendizado</a></li>
             </ul>
         </nav>
     </header>
@@ -53,11 +53,11 @@
             </td>
         </table>
 
-        <section id="aprendizado">
-            <article>
-                <p>Meu aprendizado na Trybe esta sendo incrível, eu não imaginava que em menos de um mês de curso estaria com tanto conhecimento tão bem consolidado já aprendemos Unix, Git, GitHub Html, CSS e HTML Semântico. E agora estamos no primeiro projeto e está indo muito bem, acredito que em breve as coisas ficarão mais difíceis, mas nada que um pouco de mais de dedicação e estudos fora do horário do curso não resolvam. :-)</p>
-            </article>
+        <article id="meu_aprendizado" class="lado-esquerdo">
+            <p>Meu aprendizado na Trybe esta sendo incrível, eu não imaginava que em menos de um mês de curso estaria com tanto conhecimento tão bem consolidado já aprendemos Unix, Git, GitHub Html, CSS e HTML Semântico. E agora estamos no primeiro projeto e está indo muito bem, acredito que em breve as coisas ficarão mais difíceis, mas nada que um pouco de mais de dedicação e estudos fora do horário do curso não resolvam. :-)</p>
+        </article>
 
+        <section id="passagem_aprendizado" class="lado-direito">
             <aside>
                 <p>Houve algo muito engraçado no dia de hoje, no inicio da apresentação do projeto um de nossos colegas recebeu o host do zoom e pode mutar os nossos instrutores muito hilário, cada dia eu me divirto mais neste curso. :-)</p>
             </aside>
