--- a/index.html
+++ b/index.html
@@ -39,7 +39,10 @@
                 <li>MongoDB</li>
             </li>
         </aside>
-
+        <article>
+            <p>2020 foi um ano de grandes mudanças mundiais e pessoais. <br> Este ano mudei totalmente, da aviação para tecnologia, depois de formado piloto de avião e três anos trabalhando na Latam, iniciei a faculdade de Análise e Desenvolvimento de Sistemas e ingressei em um dos concursos mais concorridos do Brasil na trybe e agora estou desenvolvendo junto com a trybe um modelo inovador de educação e aprendendo desenvolvimento web.
+             O curso nos ensina: Construir um front-end, Soft skills, Construir um back-end, Algoritmos, Metodologias Ágeis, Rotinas de desenvolvimento.</p>
+        </article>
  
     </main>
     <footer id="rodape">
