--- a/index.html
+++ b/index.html
@@ -55,6 +55,34 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut sint distinctio quae molestiae ipsum dignissimos nemo nihil quidem, ducimus voluptates natus laudantium soluta commodi veritatis libero amet necessitatibus id iusto.</p>
                 </article>
             </section>
+            <section>
+                <table>
+                    <tr>
+                        <th>
+                            HTML:
+                        </th>
+                        <td>
+                            60%
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>
+                            CSS:
+                        </th>
+                        <td>
+                            42%
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>
+                            UNIX:
+                        </th>
+                        <td>
+                            68%
+                        </td>
+                    </tr>
+                </table>
+            </section>
         </main>
         <footer id="rodape">
             <ul>
