Adicionar style em parte do artigo

--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
     <main id="conteudo">
         <section id="perfil">
             <img id="minha_foto" src="/Images/foto.jpg" alt="Foto de Gabriel">
-            <p>Lições aprendidas</p>
             <section id="minhas-licoes">
                 <ol id="licoes_aprendidas">
                     <li>Introdução Unix e Shell</li>
@@ -43,7 +42,6 @@
                     <li>CSS - Seletores e Posicionamento</li>
                     <li>HTML - Semântico</li>
                 </ol>
-                <p>Lições que ainda desejo aprender</p>
                 <ul id="licoes_a_aprender">
                     <li>Javascript</li>
                     <li>React</li>
@@ -60,7 +58,7 @@
             </ul>
         </section>
 
-        <article>
+        <article id="artigo">
             <!--https://gabrielgarciamendonca.github.io/   |   Meu portfólio foi utilizado para buscar alguns textos acerca dos locais no qual eu estudei.-->
             <h2>Historico</h2>
             <section>
