--- a/index.html
+++ b/index.html
@@ -17,20 +17,41 @@
   <section>
 
     <ol id="licoes_aprendidas">
-        <h3>Habilidades desenvolvidas</h3>
-        <li>Unix & Bash</li>
-        <li>Internet: protocolo HTTP e status code</li>
-        <li>Git & GitHub: O que é e para que serve</li>
-        <li>HTML Semântico</li>
-        <li>CSS</li>
-        <li>Linkedin: perfil profissional </li>
-        <li>Slack: uso profissional</li>
-        <li>Soft skills: Trabalho ético e Inteligência emocional</li>
-        <li>Como ter mais rendimento nos estudos</li>
-        <li>Como discernir e controlar emoções</li>
+      <h3>Habilidades desenvolvidas</h3>
+      <li>Unix & Bash</li>
+      <li>Internet: protocolo HTTP e status code</li>
+      <li>Git & GitHub: O que é e para que serve</li>
+      <li>HTML Semântico</li>
+      <li>CSS</li>
+      <li>Linkedin: perfil profissional </li>
+      <li>Slack: uso profissional</li>
+      <li>Soft skills: Trabalho ético e Inteligência emocional</li>
+      <li>Como ter mais rendimento nos estudos</li>
+      <li>Como discernir e controlar emoções</li>
     </ol>
 
-</section>
+    <ul id="licoes_a_aprender">
+      <h3>Habilidades almejadas</h3>
+      <li>Python</li>
+      <li>NodeJS</li>
+      <li>ReactJS</li>
+      <li>Banco de dados</li>
+      <li>CSS responsivo</li>
+      <li>Como aprimorar a empatia</li>
+      <li>Aprender mais sobre pensamento crítico</li>
+      <li>Melhorar a liderança de equipe</li>
+      <li>Como fazer melhor uso de feedbacks</li>
+      <li>Como ser um profissional respeitado em todos os quesitos</li>
+    </ul>
 
+  </section>
+
+  <footer id="rodape">
+    <table id="contato">
+      <tr>
+        <td><a href="https://github.com/qu4k3r" target="blank">Autor: Lucas Neves</a></td>
+      </tr>
+    </table>
+  </footer>
 </body>
 </html>
