--- a/index.html
+++ b/index.html
@@ -7,10 +7,44 @@
 </head>
 <body>
     <header id="cabecalho">
-        <h1 id="titulo">Lições Aprendidas - Trybe </h1>
+        <h1 id="titulo" class="titulos">Lições Aprendidas - Trybe </h1>
     </header> 
     <section class="image">
         <img id="minha_foto" src="https://avatars3.githubusercontent.com/u/47483029?s=460&u=cdf0eba4ef59445b6b241ba53927707198095d97&v=4" alt="Foto-Diego">  
     </section>
+    <main class="lista">
+        <section id="licoes_aprendidas">
+            <h2 class="titulos">Lições Aprendidas</h2>
+            <ol>
+                <li>Zoom</li>
+                <li>Unix</li>
+                <li>Conceito de Internet</li>
+                <li>Conceito de Git</li>
+                <li>Comandos Git</li>
+                <li>Conceito Github</li>
+                <li>Preparando Linkedin</li>
+                <li>Inteligencia Emocional</li>
+                <li>HTML</li>
+                <li>CSS</li>
+            </ol>
+        </section>
+        <section id="licoes_a_aprender">
+            <h2 class="titulos">Lições a Aprender</h2>
+            <ul>
+                <li>Lógica de Programação</li>
+                <li>Javascript</li>
+                <li>Dom</li>
+                <li>Javascript ES6</li>
+                <li>Testes Automatizados</li>
+                <li>React</li>
+                <li>Metodologias Ágeis</li>
+                <li>API</li>
+                <li>SQL</li>
+                <li>MongoDB</li>
+            </ul>
+        </section>
+        
+    </main>
+
 </body>
 </html>
