colocando aside dentro de um section

--- a/index.html
+++ b/index.html
@@ -67,15 +67,16 @@
         </p>
     </article>
 
-    <aside>
-        <h4>Passagem sobre meu aprendizado</h4>
-        <p>
-            Ainda tenho muito a aprender, tanto em conhecimentos tecnicos e novas tecnologias como React e Python como
-            em soft skills de como gerir o tempo e como se comportar em um ambiente de desenvolvimento.
-        </p>
-    </aside>
-
-
+    <section>
+        <aside>
+            <h4>Passagem sobre meu aprendizado</h4>
+            <p>
+                Ainda tenho muito a aprender, tanto em conhecimentos tecnicos e novas tecnologias como React e Python como
+                em soft skills de como gerir o tempo e como se comportar em um ambiente de desenvolvimento.
+            </p>
+        </aside>
+    </section>
+    
     <table border="1">
         <tr>
             <th>Reino</th>
