--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
     <title>Document</title>
 </head>
 <body>
+
     <header id="cabecalho">
         <h1 id="titulo">Lições prendidas - Trybe!</h1>
     </header>
+
+    <img id="minha_foto" src="https://avatars1.githubusercontent.com/u/72811671?s=460&u=34008ff57b6cc2524ae87a154c1fe70ef90abe5c&v=4" alt="Cleber Teixeira - Turma 09">
+
 </body>
 </html>
