--- a/index.html
+++ b/index.html
@@ -14,11 +14,9 @@
 
     <nav id="menu">
       <ul>
-        <li>
-          <a href="#licoes_a_aprender">Listas</a>
-          <a href="#tabela">Tabela</a>
-          <a href="#rodape">Rodapé</a>
-        </li>
+        <li><a href="#licoes_a_aprender">Listas</a></li>
+        <li><a href="#tabela">Tabela</a></li>
+        <li><a href="#rodape">Rodapé</a></li>
       </ul>
     </nav>
 
