--- a/index.html
+++ b/index.html
@@ -9,9 +9,18 @@
 	<body>
 		<header id="cabecalho">
       <h1 id="titulo">Lições aprendidas - Trybe</h1>
-    </header>
+    </header>   
     <img id="minha_foto" src="./foto-Ivan.jpg" alt="minha-foto" width="300">
     <a href="https://github.com/ivanrafael-dev" target="_blank">GitHub</a>
+    <section id="section">
+      <article id="article">
+        <h2>Meu Aprendizado</h2>
+        <p>Estou muito feliz até agora com o aprendizado junto com a família Trybe.</p>
+        <p>Aprendemos os camandos básicos do terminal linux e também sobre git e github e como fazer repositórios, clonar, commitar e hospedar páginas no GitPages.</p>
+        <p>Começamos os estudos de HTML e CSS, e HTML semântico, que realmente é uma coisa muito importante e interessante, além de ajudar em muito a organizar as idéias.</p>
+        <p>Tivemos também nessa semana algumas informações importantes sobre como será nosso auto-conhecimento, os 1:1 irão ajudar a alinharmos as idéias.</p>
+      </article>
+    </section>
     <ol id="licoes_aprendidas">
       <li>Unix</li>
       <li>Bash</li>
