Removendo css e começando de novo

--- a/index.html
+++ b/index.html
@@ -3,20 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Lições aprendidas | Trybe</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
 </head>
 <body>
     <!--                                           --- HEADER ---                                                     -->
     <header id="cabecalho">
-        <h1 id="titulo">
-            Meu projeto!
-        </h1>
+        <h1 id="titulo">Lições aprendidas | Trybe</h1>
+        <nav class="menu">
+            <a target="_blank" href="#cabecalho">Home</a>
+            <a target="_blank" href="https://google.com">Google</a>
+        </nav>
     </header>
     <!--                                           --- MAIN ---                                                     -->
     <main>
-        <img id="minha_foto" src="imagens/toselli.jpg" width="100px" alt="Uma foto de Pedro Toselli">
+        <div class="img-wrapper">
+            <img id="minha_foto" src="imagens/toselli.jpg" width="230px" alt="Uma foto de Pedro Toselli">
+        </div>
+            <div class="main-name">
+                <h3>Pedro Toselli <br> Estudante de desenvolvimento web | Trybe</h3>
+            </div>
+            <div class="main-description">
+                <p>Sou estudante de desenvolvimento web na Trybe, gosto muito da área de desenvolvimento e amo "quebrar a cabeça" com novos desafios. <br>Busco sempre me desenvolver tanto como pessoa quanto como profissional, levando em consideração minhas hard-skills e soft-skills.</p>
+            </div>
+    </main>
+    <!--                                           --- ARTICLE---                                                     -->
+    <article>
+        <section>
+            <aside>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet optio est velit, quasi id harum.</p>
+            </aside>
+        </section>
         <section class="main-list">
             <ol id="licoes_aprendidas">
                 <li>Inteligência emocional</li>
@@ -43,10 +61,11 @@
                 <li>como fazer miojo</li>
             </ul>
         </section>
-    </main>
+    </article>
+    <!--                                           --- FOOTER ---                                                     -->
     <footer id="rodape">
         <p id="dev-name">Este site foi criado e desenvolvido por Pedro Toselli</p>
-        <a href="www.linkedin.com/in/pedrotoselli"><i class="fab fa-linkedin"></i></a>
+        <a target="_blank" href="https://linkedin.com/in/pedrotoselli"><i class="fab fa-linkedin"></i></a>
     </footer>
 </body>
 </html>
