--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
   <section>
     <article>
-      <h2>artigo sobre seu aprendizado.</h2>
+      <h2>artigo sobre seu aprendizado</h2>
       <p>
         <strong>Nada facil!</strong>
         Na verdade meu aprendizado tem sido muito bom e satisfatório. Quando penso o nível de conhecimento que tinha
@@ -69,6 +69,15 @@
     </article>
   </section>
 
+  <section>
+    <aside>
+      <h3>Uma passagem do meu aprendizado</h3>
+      <p>
+        Uma passagem tensa e ao mesmo tempo engraçada foi quando não conseguia entender como funcionava o Git e GitHub.
+        Foi um desespero tão grande que não dormir por 2 noites até aprender como funcionava esse negócio sô!
+      </p>
+    </aside>
+  </section>
   <section>
     <table>
       <th>
